============================================================================
SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
============================================================================

Version 6.1.3 - not yet released
* calculations
  - reduce memory usage
* user interface
  - translation updates
  - new translation: Japanese

Version 6.1.2 - 2011/06/28
* devices
  - workaround for GPGGA/GPRMC clock difference
* calculations
  - reduce memory usage further
  - fix boundary routine of the key hole zone
  - set system clock only from a real GPS fix
  - set system clock again after device reconnect
  - MacCready setting defaults to safety MacCready on startup
* user interface
  - change low battery thresholds
  - manual and translation updates
  - fix UTC offset setting
  - fix overlapped InfoBox text
  - translation updates
* map
  - fixed coast line display (areas below zero no longer flooded)
* Linux
  - fix broken textures on GPUs with power-of-two dimensions
* Android
  - enable sound effects on task start, arm turn, GPS connection
  - continue calculations while airspace warning is displayed
* Altair
  - the Escape button saves dialogs (such as InfoBox setup)

Version 6.1.1 - 2011/06/01
* calculations
  - fix arrival heights which are below the safety height
  - reduce memory usage
  - fixed several bugs in the teamcode calculation and display
* user interface
  - new option for large glider symbol
  - re-enable the team bearing diff InfoBox
  - fix crash in the waypoint editor
* Windows
  - workaround for PPC2000 bug that caused lockups
* Android
  - fix crash bug after orientation change and resume
  - support non-standard SD card mount points
* Altair
  - fix UI lag
  - fix default task on startup
  - optionally load XCSoarData from USB drive
  - swap "ACK Warn" / "ACK Space" hot keys
  - disallow the on-screen keyboard
  - fix clipped cursor in text entry dialog
  - fix default font for "important topology"

Version 6.1 - 2011/05/19