@@ -8,6 +8,7 @@ Version 6.1.3 - not yet released
 * user interface
   - translation updates
   - new translation: Japanese
+  - support mouse wheel on Linux
 
 Version 6.1.2 - 2011/06/28
 * devices
